# homebrew-coldstar

./: .cfignore  .gitignore  COLOSSEUM.md  DEMO_MATERIALS.md  DEMO_WALKTHROUGH.md  DEPLOYED_PROGRAMS.md  FINAL_ACTION_CHECKLIST.md  FORUM_DAY5_UPDATE.md  HACKATHON_STRATEGY.md  MACOS_QUICKSTART.md  MACOS_USB_SUPPORT.md  MCP_INTEGRATION.md  Makefile  PRIVACY.md  PRODUCTION_ARCHITECTURE.md  README.md  SECURITY.md  SOCIAL_MEDIA_COPY.md  SOLANA_SECURITY_KNOWLEDGE.md  STEP7_QUICK_REFERENCE.md  STEP7_VISUAL_GUIDE.md  SUBMISSION_CHECKLIST.md  SUBMISSION_SUCCESS.md  TERMS.md  TUI_GUIDE.md  VIDEO_RECORDING_GUIDE.md  base_cli.py  coldstar.py  config.py  create_animated_preview.py  create_screenshots.py  demo.html  demo_coldwallet.py  demo_tui.sh  flash_usb.py  flash_usb_tui.py  generate-demo-video.py  generate-demo-video.sh  index.html  install.sh  (+11 more)
book/: build-pdf.py
coldstar-interactive/: coldstar-lottie.json  index.html
coldstar-manim/: coldstar_scene.py
coldstar-video/: package-lock.json
coldstar-video/src/: ColdstarVertical.tsx  ColdstarVideo.tsx  Root.tsx
companion-app/: index.html  manifest.json  sw.js
docs/: COLOSSEUM_FORUM_POST.md  FAIRSCORE_INTEGRATION.md  LAUNCH_TWEETS.md  SUPERTEAM_SUBMISSION_FIELDS.md  fairscale-openapi.yaml  index.html  pitch-deck.html  whitepaper.html
mcp-server/: README.md  index.js  package-lock.json  package.json
screenshots/: README.md  flash_usb_animated.html  flash_usb_preview.html  index.html  vault_dashboard_preview.html
secure_signer/: Cargo.toml
slides/: index.html
src/: backup.py  evm_network.py  evm_transaction.py  evm_wallet.py  fairscore_integration.py  iso_builder.py  jupiter_integration.py  network.py  pyth_integration.py  qr_transfer.py  token_transfer.py  transaction.py  ui.py  usb.py  wallet.py
video/: .gitignore  build_video_v2.py
(+5 files in other folders)
