[project]
name = "coldstar"
version = "1.1.0"
description = "Air-gapped cold wallet for Solana and Base (Coinbase L2) with secure Rust signing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Purple Squirrel Media LLC", email = "dev@purplesquirrelmedia.io"},
]
keywords = ["solana", "base", "evm", "cold-wallet", "air-gapped", "hardware-wallet", "crypto", "fairscore"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "aiofiles>=23.0.0",
    "base58>=2.1.0",
    "httpx>=0.24.0",
    "pynacl>=1.5.0",
    "qrcode>=8.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "solana>=0.30.0",
    "solders>=0.18.0",
    "textual>=0.89.0",
    # EVM / Base support
    "eth-account>=0.11.0",
    "web3>=6.0.0",
]

[project.urls]
Homepage = "https://coldstar.dev"
Repository = "https://github.com/ExpertVagabond/coldstar-colosseum"
Documentation = "https://coldstar.dev"
"Bug Tracker" = "https://github.com/ExpertVagabond/coldstar-colosseum/issues"

[project.scripts]
coldstar = "main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
include = ["src*"]
